# dotenvy

./: .env  .env-substitution  .gitignore  .travis.yml  CHANGELOG.md  CONTIRBUTING.md  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  ci-check.sh
.github/: codecov.yml
.github/workflows/: ci.yml  codecov-comment.yml  rust.yml
azure-pipelines/: build-template.yml  fix_coverage_for_cobertura.py
dotenv/: Cargo.toml  README.md
dotenv/examples/: list_variables.rs  simple.rs
dotenv/src/: errors.rs  find.rs  iter.rs  lib.rs  parse.rs
dotenv/tests/: test-child-dir.rs  test-default-location-overload.rs  test-default-location-override.rs  test-default-location.rs  test-dotenv-iter.rs  test-from-filename-iter.rs  test-from-filename-overload.rs  test-from-filename-override.rs  test-from-filename.rs  test-from-path-iter.rs  test-from-path-overload.rs  test-from-path-override.rs  test-from-path.rs  test-from-read-overload.rs  test-from-read-override.rs  test-from-read.rs  test-ignore-bom.rs  test-multiline-comment.rs  test-multiline.rs  test-overload.rs  test-var.rs  test-variable-substitution.rs  test-vars.rs
dotenv/tests/common/: mod.rs
dotenv/tests/integration/: dotenv.rs  main.rs
dotenv/tests/integration/api/: dotenv.rs  dotenv_iter.rs  dotenv_override.rs  from_filename.rs  from_filename_iter.rs  from_filename_override.rs  from_path.rs  from_path_iter.rs
dotenv/tests/integration/case/: bom.rs  comment.rs  directory.rs  envfile.rs  export.rs  multiline.rs  multiline_comment.rs  quote.rs  var_substitution.rs  whitespace.rs
dotenv/tests/integration/util/: assert.rs  assertions.rs  envfile.rs  mod.rs  test.rs  testenv.rs  tests.rs
dotenv/tests/integration/util/tests/: default_env.rs  envfile_builder.rs  mod.rs  testenv.rs
dotenv_cli/: Cargo.toml
dotenv_cli/src/: main.rs
dotenv_codegen/: .env  Cargo.toml  README.md
dotenv_codegen/dotenv_codegen_impl/: Cargo.toml
dotenv_codegen/dotenv_codegen_impl/src/: lib.rs
dotenv_codegen/src/: dotenv_macro.rs  lib.rs
dotenv_codegen/tests/: basic_dotenv_macro.rs
dotenv_codegen_impl/: Cargo.toml  README.md
dotenv_codegen_impl/src/: lib.rs
dotenv_codegen_implementation/: Cargo.toml
dotenv_codegen_implementation/src/: lib.rs
dotenv_macros/: Cargo.toml
dotenv_macros/src/: lib.rs
dotenvy/: Cargo.toml  README.md
dotenvy-macros/: Cargo.toml
dotenvy-macros/src/: lib.rs
dotenvy/src/: err.rs  iter.rs  lib.rs  parse.rs
dotenvy/tests/: common.rs  test-child-dir.rs  test-default-location-override.rs  test-default-location.rs  test-ignore-bom.rs  test-multiline-comment.rs  test-multiline.rs  test-variable-substitution.rs  test-vars.rs
dotenvy/tests/integration/: main.rs  testenv.rs
dotenvy_macro/: Cargo.toml  README.md
dotenvy_macro/src/: lib.rs
examples/: .env  env-example  env-example-2  simple.rs
examples/async-std-dotenvy/: Cargo.toml  out.rs
examples/async-std-dotenvy/src/: main.rs
examples/dev-prod/: Cargo.toml
examples/dev-prod/src/: main.rs
examples/find/: Cargo.toml
examples/find/src/: main.rs
examples/from-path/: Cargo.toml
examples/from-path/src/: main.rs
examples/modify/: Cargo.toml  print_host.py
examples/modify-macro/: Cargo.toml
examples/modify-macro/src/: main.rs
examples/modify-tokio/: Cargo.toml
examples/modify-tokio-macro/: Cargo.toml
examples/modify-tokio-macro/src/: main.rs
examples/modify-tokio/src/: main.rs
examples/modify/src/: main.rs
examples/multiple-files/: Cargo.toml
examples/multiple-files/src/: main.rs
examples/non-utf8/: Cargo.toml  env-example-utf16
examples/non-utf8/src/: main.rs
examples/optional/: Cargo.toml
examples/optional/src/: main.rs
examples/tokio-dotenvy/: Cargo.toml  out.rs
examples/tokio-dotenvy/src/: main.rs
scripts/: ci-check.sh  cicheck.sh
src/: errors.rs  find.rs  iter.rs  lib.rs  parse.rs
test_util/: Cargo.toml  LICENSE  README.md
test_util/src/: assertions.rs  env_file.rs  envfile.rs  error.rs  lib.rs  testenv.rs  wrap.rs  wrapper.rs
test_util/src/tests/: default_env.rs  env_file.rs  env_file_builder.rs  envfile.rs  envfile_builder.rs  mod.rs  testenv.rs
tests/: .env  Cargo.toml  child-dir.rs  default-location.rs  test-child-dir.rs  test-default-location.rs  test-dotenv-iter.rs  test-from-filename-iter.rs  test-from-filename.rs  test-from-path-iter.rs  test-from-path.rs  test-var.rs  test-vars.rs
tests/common/: mod.rs
tests/src/: main.rs
