[package]

name = "dotenv"
version = "0.11.0"
authors = [
	"Noemi Lapresta <noemi.lapresta@gmail.com>",
	"Craig Hills <chills@gmail.com>",
	"Mike Piccolo <mfpiccolo@gmail.com>",
	"Alice Maz <alice@alicemaz.com>",
	"Sean Griffin <sean@seantheprogrammer.com>",
]
readme = "README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/purpliminal/rust-dotenv"
repository = "https://github.com/purpliminal/rust-dotenv"
description = "A `dotenv` implementation for Rust"

[dependencies]
derive-error-chain = "0.11.0"
error-chain = { version = "0.11.0", default-features = false }
regex = "0.2.1"

[dev-dependencies]
tempdir = "0.3.0"

[features]
backtrace = ["error-chain/backtrace"]
default = ["backtrace"]
