[package]

name = "dotenv"
version = "0.12.0"
authors = [
	"Noemi Lapresta <noemi.lapresta@gmail.com>",
	"Craig Hills <chills@gmail.com>",
	"Mike Piccolo <mfpiccolo@gmail.com>",
	"Alice Maz <alice@alicemaz.com>",
	"Sean Griffin <sean@seantheprogrammer.com>",
	"Adam Sharp <adam@sharplet.me>",
]
readme = "README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/purpliminal/rust-dotenv"
repository = "https://github.com/purpliminal/rust-dotenv"
description = "A `dotenv` implementation for Rust"

[dependencies]
derive-error-chain = "0.11.0"
error-chain = { version = "0.11.0", default-features = false }
lazy_static = "1.0.0"
regex = "1.0"

clap = { version = "2", optional = true }

[dev-dependencies]
tempdir = "0.3.0"

[features]
backtrace = ["error-chain/backtrace"]
cli = ["clap"]
default = ["backtrace"]

[[bin]]
name = "dotenv"
required-features = ["cli"]
