[package]
name = "dotenvy"
version = "0.15.7"
authors = [
  "Noemi Lapresta <noemi.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
  "Adam Sharp <adam@sharplet.me>",
  "Arpad Borsos <arpad.borsos@googlemail.com>",
  "Allan Zhang <allanzhang7@gmail.com>",
]
description = "A well-maintained fork of the dotenv crate"
homepage = "https://github.com/allan2/dotenvy"
readme = "README.md"
keywords = ["dotenv", "env", "environment", "settings", "config"]
categories = ["configuration"]
license = "MIT"
repository = "https://github.com/allan2/dotenvy"
edition = "2018"
rust-version = "1.68.0"

[[bin]]
name = "dotenvy"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.3.0"
once_cell = "1.16.0"

[features]
cli = ["clap"]
