[package]
name = "dotenvy_macro"
version = "0.15.7"
authors = [
  "Santiago Lapresta <santiago.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
  "Allan Zhang <allanzhang7@gmail.com>",
]
readme = "README.md"
keywords = ["dotenv", "env", "environment", "settings", "config"]
categories = ["configuration"]
license = "MIT"
homepage = "https://github.com/allan2/dotenvy"
repository = "https://github.com/allan2/dotenvy"
description = "A macro for compile time dotenv inspection"
edition = "2021"
rust-version = "1.74.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
dotenvy = { path = "../dotenvy" }

[lints]
workspace = true