[package]
name = "dotenvy_macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
authors = [
  "Santiago Lapresta <santiago.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
  "Allan Zhang <allanzhang7@gmail.com>",
]
description = "A macro for compile time dotenv inspection"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
dotenvy = { path = "../dotenvy" }

[lints]
workspace = true