[package]
name = "dotenvy_macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
authors = [
  "Santiago Lapresta <santiago.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
  "Allan Zhang <allanzhang7@gmail.com>",
]
description = "A macro for compile time dotenv inspection"
readme = true

[lib]
proc-macro = true

[dependencies]
dotenvy = { path = "../dotenvy" }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true