[lib]
proc-macro = true

[package]

name = "dotenv_codegen_impl"
version = "0.14.0"
authors = [
  "Santiago Lapresta <santiago.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
]
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/dotenv-rs/dotenv"
repository = "https://github.com/dotenv-rs/dotenv"
description = "A `dotenv` implementation for Rust"


[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"
proc-macro-hack = "0.5"
dotenv = { version = "0.14", path = "../dotenv" }