[lib]
proc-macro = true

[package]

name = "dotenv_codegen_implementation"
version = "0.15.0"
authors = [
  "Santiago Lapresta <santiago.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
]
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/dotenv-rs/dotenv"
repository = "https://github.com/dotenv-rs/dotenv"
description = "A `dotenv` implementation for Rust"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = "1.0.86"
proc-macro-hack = "0.5.19"
dotenvy = { version = "0.15", path = "../dotenv" }
