cargo-features = ["edition2024"]

[package]
name = "dotenvy-macros"
version = "0.1.0"
authors = ["Allan"]
readme = "README.md"
keywords = ["dotenv", "env", "environment", "settings", "config"]
categories = ["configuration"]
license = "MIT"
homepage = "https://github.com/allan2/dotenvy"
repository = "https://github.com/allan2/dotenvy"
description = "Runtime macros for dotenvy"
edition = "2024"
#rust-version = "1.72.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
dotenvy = { path = "../dotenvy" }