[package]
name = "dotenvy-macros"
publish = false # until 0.16 release
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
authors = ["Allan Zhang <allanzhang7@gmail.com>"]
description = "Runtime macros for dotenvy"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
dotenvy = { path = "../dotenvy" }

[lints]
workspace = true