[package]
name = "dotenvy_test_util"
version = "0.1.0"
authors = [
    "Christopher Morton <sonro@gmx.com>",
    "Allan Zhang <allanzhang7@gmail.com>",
]
description = "Test utilities for dotenvy"
homepage = "https://github.com/allan2/dotenvy"
readme = "README.md"
keywords = ["dotenv", "testing", "utility", "util", "harness"]
categories = ["development-tools", "development-tools::testing"]
license = "MIT"
repository = "https://github.com/allan2/dotenvy"
edition = "2021"
rust-version = "1.68.0"

[dependencies]
dotenvy = { path = "../dotenv", version = "0.15.7" }
tempfile = "3.3.0"
once_cell = "1.16.0"
