[package]
name = "dotenv_codegen_impl"
version = "0.1.0"
authors = [
  "Santiago Lapresta <santiago.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
]
readme = "../../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/purpliminal/rust-dotenv"
repository = "https://github.com/purpliminal/rust-dotenv"
description = "A `dotenv` implementation for Rust"

[lib]
proc-macro = true

[dependencies]
dotenv = "^0.8.0"
proc-macro-hack = "0.4"
quote = "0.3"
syn = "0.11"
